LMYC-115: prevent page rendering on mobile devices (#47)
* LMYC-115: prevent page rendering on mobile devices

* LMYC-115: removed unused function

* LMYC-115: fix e2e

* LMYC-115: wait half a second after searching

* LMYC-115: increment wait to a second

* LMYC-115: increment wait to 5 seconds just for testing purposes

* LMYC-115: fix

* LMYC-115: try with 1 second and a half

* LMYC-115: try with 2 seconds

---------

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,3 +54,7 @@ button:disabled {
 .react-datepicker__year-wrapper {
   display: block !important;
 }
+
+.mobileErrorMsg {
+  text-align: center;
+}
